# ScienceR-Dsim

./: .dockerignore  .gitignore  .replit  AGENTS.md  CLAUDE.md  DEPLOYMENT_READINESS_SUMMARY.md  Dockerfile  Makefile  OPENNEURO_DATA_ACCESS.md  PHASE_5_FULL_RESEARCH_SUMMARY.md  README.md  REAL_DATA_DEPLOYMENT_GUIDE.md  REPORT_anesthesia_signed_winding.md  REPORT_ds004917_pcist_tms_topology.md  __init__ (3).py  __init__ (6).py  build_manifest.py  conftest.py  defaults.yaml  defects.py  ds000245_fMRI_TDA.ipynb  main.py  main.tex  pytest.ini  requirements.txt  run_benchmarks.sh  run_cross_domain.py
apps/awareness_studio/: .env.example  .gitignore  Dockerfile  Makefile  README.md  TOOLS_MANIFEST.md  pyproject.toml
apps/awareness_studio/docs/: CONFIG.md  FIRST_DAY_CHECKLIST.md  LOCAL_QUICKSTART.md
apps/awareness_studio/inputs/: suttacentral_seed_cards.jsonl
apps/awareness_studio/inputs/lit_review/: clinical-trials-mindfulness-summary.md  meditation-eeg-oscillations-lit.md  mindfulness-brain-networks-lit.md  vedana-gain-control-lit.md
apps/awareness_studio/inputs/notion_export/: answer_templates.md  book_seed_q1.md  book_seed_q2.md  book_seed_q3.md  book_seed_q4.md  book_system.md  rag_plan.md  run41_theravada_suttacentral_integration.md
apps/awareness_studio/inputs/sim_artifacts/: README.md
apps/awareness_studio/scripts/: bootstrap.ps1  bootstrap.sh
apps/awareness_studio/src/awareness_studio/: airtable_cli.py  answer_modes.py  book_generator.py  chat_cli.py  chunking.py  config.py  (+11 more)
apps/awareness_studio/tests/: golden_questions.json  test_airtable_client.py  test_airtable_sync.py  test_book_generator.py  test_chunking.py  test_cmd_orchestrate.py  test_embeddings.py  test_eval_runner.py  test_export_sim_artifacts.py  test_orchestrator_dry_run.py  test_prompt_optimizer.py  test_suttacentral_seed_cards.py  test_tool_router.py  test_web_app.py  test_web_tool_routes.py  test_web_ui.py
apps/awareness_studio/tools/: __init__.py  export_sim_artifacts.py
(+893 files in other folders)
