[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awareness-studio"
version = "0.1.0"
description = "Book Generator + Guidance Chatbot for Awareness Research"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.28",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov"]

[project.scripts]
awareness-chat = "awareness_studio.chat_cli:main"
awareness-book = "awareness_studio.book_generator:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
